--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,23 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+# Hapy-hackathon
+## Version
+0.0.1
 
-Things you may want to cover:
+## Requirements
+- ruby `>=2.3`
+- sqlite3
 
-* Ruby version
+### Installation (development)
+You need bundler installed
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+```sh
+$ bundle
+```
+```sh
+$ rake db:migrate
+$ rake db:seed
+```
+```sh
+$ rails s
+```
